...
                    android:textStyle="bold"
                    android:textColor="#999999"
                    android:letterSpacing="0.1"
                    android:paddingBottom="12dp"/>

                <TextView
                    android:id="@+id/tv_overall_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Verificando..."
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="#4CAF50"
...
